issue fix in already assigned
